# webgl2-poc2

./: .eslintrc.json  .gitignore  CMakeLists.txt  README.md  context_manager.js  cuemol_system.js  index.html  index.js  main-window.js  main_em.js  package-lock.json  package.json  preload.js  webgl_native_render.js  webpack.config.js  wrapper_utils.js
jssrc/: cuemol_system.js  index.css  index.html  index.js  main.js  preload.js
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  app.cpp  app.hpp  draw_attr_elems.hpp  gfx_render_addon.cpp  mcwgen.cmake  proxy.cpp  proxy.hpp  random_generator.hpp
src/data/: default_style.xml  sysconfig.xml
src/embr/: CMakeLists.txt  EmDisplayContext.cpp  EmDisplayContext.hpp  EmDisplayList.cpp  EmDisplayList.hpp  EmProgObjMgr.cpp  EmProgObjMgr.hpp  EmProgramObject.cpp  EmProgramObject.hpp  EmShaderObject.cpp  EmShaderObject.hpp  EmTimerImpl.hpp  EmVBO.hpp  EmView.cpp  EmView.hpp  EmView.qif  GLES3Error.hpp  direct.cpp  embr.cpp  embr.hpp  embr.moddef  init_cuemol.cpp  make_wrapper_table.py  pre.js  utils.js  utils_module.js  wrapper.cpp  wrapper.hpp
src/embr/es6/: base_wrapper.js  cuemol.js  wrapper_loader.js
src/gfx/: CMakeLists.txt  DisplayContext.hpp  DrawAttrArray.hpp  DrawElem.hpp  FixedMesh.cpp  FixedMesh.hpp  GrowMesh.hpp  ProgramObject.hpp  color_scanner.lxx
src/modules/molstr/: CMakeLists.txt  SelAroundImpl.cpp  SelCacheMgr.cpp  SelNodes.cpp  SelNodes.hpp  SimpleRenderer.cpp  scanner_sel.lxx
src/node_jsbr/: CMakeLists.txt  ElecDisplayContext.cpp  ElecDisplayContext.hpp  ElecDisplayList.cpp  ElecDisplayList.hpp  ElecProgramObject.cpp  ElecProgramObject.hpp  ElecTimerImpl.hpp  ElecVBOImpl.hpp  ElecView.cpp  ElecView.hpp  ElecView.qif  FloatArray.hpp  MouseEventHandler.cpp  MouseEventHandler.hpp  init_cuemol.cpp  node_jsbr.cpp  node_jsbr.hpp  node_jsbr.moddef  wrapper.cpp  wrapper.hpp
src/node_jsbr/es6/: base_wrapper.js  cuemol.js
src/perl/: EmClass.pm  Jsclass.pm  mcwrapgen3.pl
src/python/: make_wrapper_table.py
src/qlib/: BinStream.cpp  CMakeLists.txt  EventManager.cpp  EventManager.hpp  ExpatInStream.cpp  FileStream.hpp  LMsgLog.cpp  LProcMgr.cpp  LThread.cpp  LThread.hpp  LUnicode.cpp  LVarArgs.hpp  LVariant.cpp  LVariant.hpp  MthrEventCaster.hpp  PipeStream.cpp  PipeStream.hpp  PosixFileStream.cpp  PosixProcImpl.hpp  Utils.cpp  qlib.cpp
src/qsys/: CMakeLists.txt  DispCacheRenderer.cpp  DispCacheRenderer.hpp  DispListRenderer.cpp  DispListRenderer.hpp  EsDisplayContext.cpp  EsDisplayContext.hpp  EsDisplayList.cpp  EsDisplayList.hpp  EsView.cpp  EsView.hpp  InOutHandler.cpp  MouseEventHandler.cpp  MouseEventHandler.hpp  ObjReader.cpp  ObjWriter.cpp  ProgObjMgr.cpp  ProgObjMgr.hpp  Scene.cpp  Scene.hpp  SceneExporter.cpp  SceneManager.cpp  SceneXMLReader.cpp  SceneXMLWriter.cpp  StreamManager.cpp  TestDLRenderer.cpp  TestDLRenderer.hpp  TestDLRenderer.qif  TestRenderer.cpp  TestRenderer.hpp  TestRenderer.qif  View.cpp  View.hpp  View.qif  qsys.cpp  qsys.moddef
src/qsys/command/: LoadObjectCommand.cpp  LoadSceneCommand.cpp
web_client/: config-overrides.js  package.json
web_client/src/: App.js  MolView.css  MolView.js  MouseEvents.js  load_wasm.js
